[package]
name = "seyos"
version = "1.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# To get the time
chrono = "0.4.19"
# To parse command line arguments
clap = "2.33.3"
# Disord rich presence implementation
discord-rpc-client = "0.3.0"
# Logging
log = "0.4.14"
# To get system information
sysinfo = "0.20.5"
